[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/npc_2/npc_2.gd" type="Script" id=1]
[ext_resource path="res://assets/2D Pixel Dungeon Asset Pack/character and tileset/Dungeon_Character.png" type="Texture" id=2]
[ext_resource path="res://entities/problem_solver/problem_solver.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/dialogue/dialogue.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[node name="npc_2" type="Area2D"]
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 7
vframes = 4
frame = 24

[node name="collission_shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="dialogue" parent="." instance=ExtResource( 4 )]

[node name="control" type="Control" parent="."]
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0

[node name="interact_button" type="Label" parent="control"]
margin_left = 21.0
margin_top = 1.0
margin_right = 29.0
margin_bottom = 15.0
text = "E"

[node name="problem_solver" parent="." instance=ExtResource( 3 )]

[connection signal="body_entered" from="." to="." method="_on_npc_2_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_npc_2_body_exited"]
[connection signal="finish_dialogue" from="dialogue" to="." method="_on_dialogue_finish_dialogue"]
[connection signal="finish_problem" from="problem_solver" to="." method="_on_problem_solver_finish_problem"]
